we now have logo

--- a/presentation/project3_slide.tex
+++ b/presentation/project3_slide.tex
@@ -113,7 +113,7 @@ basicstyle=\ttfamily,
 \frametitle{Idea 1: Selective Polling}
 \begin{itemize}
 \item Only poll $n \le N$ clients per interval
-\item Random permutation for fairness and stability
+\item Random permutation for fairness
 \item Consider remaining clients only after all selected are served
 \end{itemize}
 \begin{figure}
@@ -373,7 +373,7 @@ basicstyle=\ttfamily,
     \item Selective polling: weighted random permutation
     \item Retry limit: determine optimum automatically
     \item Phase 2: Debt based policies
-    \item S-WiFi logo, website, etc.
+    \item S-WiFi website, etc.
   \end{itemize}
 \end{frame}
 
@@ -383,7 +383,7 @@ basicstyle=\ttfamily,
   \end{center}
   \begin{figure}[htbp]
     \centering
-    \includegraphics[height=.3\textheight]{url.pdf}
+    \includegraphics[height=.3\textheight]{qrcode.png}
   \end{figure}
 \end{frame}
 \end{document}
